criada rota de buscar estilo da loja pelo lado do cliente
